WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159790
It should be a syntax error to have a 'use strict' directive inside a function that has a non-simple parameter list
https://bugs.webkit.org/show_bug.cgi?id=159790
Summary
It should be a syntax error to have a 'use strict' directive inside a functio...
Saam Barati
Reported
2016-07-14 15:32:36 PDT
...
Attachments
patch
(17.12 KB, patch)
2016-07-14 15:44 PDT
,
Saam Barati
ggaren
: review+
Details
Formatted Diff
Diff
patch for landing
(28.27 KB, patch)
2016-07-14 16:38 PDT
,
Saam Barati
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
patch for landing
(28.27 KB, patch)
2016-07-14 18:42 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2016-07-14 15:33:34 PDT
<
rdar://problem/27171636
>
Saam Barati
Comment 2
2016-07-14 15:44:25 PDT
Created
attachment 283696
[details]
patch
Geoffrey Garen
Comment 3
2016-07-14 15:44:59 PDT
Comment on
attachment 283696
[details]
patch r=me
Saam Barati
Comment 4
2016-07-14 16:38:54 PDT
Created
attachment 283708
[details]
patch for landing
WebKit Commit Bot
Comment 5
2016-07-14 18:24:57 PDT
Comment on
attachment 283708
[details]
patch for landing Rejecting
attachment 283708
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 283708, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in LayoutTests/ChangeLog contains OOPS!. Full output:
http://webkit-queues.webkit.org/results/1682964
Saam Barati
Comment 6
2016-07-14 18:42:59 PDT
Created
attachment 283730
[details]
patch for landing
WebKit Commit Bot
Comment 7
2016-07-14 19:12:31 PDT
Comment on
attachment 283730
[details]
patch for landing Clearing flags on attachment: 283730 Committed
r203263
: <
http://trac.webkit.org/changeset/203263
>
WebKit Commit Bot
Comment 8
2016-07-14 19:12:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug